<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemGame4x4">

    <TextView
        android:id="@id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:text="@string/title_activity_mg34"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="15dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/Main_Page"
        android:text="@string/Main_Page"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/imageButton1x1"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/IB1x1"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blueback" />


    <ImageButton
        android:id="@+id/imageButton1x2"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignTop="@id/imageButton1x1"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/IB1x2"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/imageButton1x1"
        app:layout_constraintTop_toTopOf="@+id/imageButton1x1"
        app:srcCompat="@drawable/blueback" />

    <ImageButton
        android:id="@+id/imageButton1x3"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/IB1x3"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/imageButton1x4"
        app:layout_constraintTop_toTopOf="@+id/imageButton1x2"
        app:srcCompat="@drawable/blueback" />

    <ImageButton
        android:id="@+id/imageButton1x4"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/IB1x4"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton1x3"
        app:srcCompat="@drawable/blueback" />

    <ImageButton
        android:id="@+id/imageButton2x1"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/IB2x1"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageButton1x1"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1x1"
        app:srcCompat="@drawable/blueback" />

    <ImageButton
        android:id="@+id/imageButton2x2"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignTop="@id/imageButton2x1"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/IB1x2"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageButton1x2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2x1"
        app:srcCompat="@drawable/blueback" />

    <ImageButton
        android:id="@+id/imageButton2x3"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/IB2x3"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageButton1x3"
        app:layout_constraintTop_toTopOf="@+id/imageButton2x2"
        app:srcCompat="@drawable/blueback" />

    <ImageButton
        android:id="@+id/imageButton2x4"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/IB2x4"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageButton1x4"
        app:layout_constraintTop_toTopOf="@+id/imageButton2x3"
        app:srcCompat="@drawable/blueback" />


    <ImageButton
        android:id="@+id/imageButton3x1"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/IB3x1"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageButton2x1"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2x1"
        app:srcCompat="@drawable/blueback" />

    <ImageButton
        android:id="@+id/imageButton3x2"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignTop="@id/imageButton1x1"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/IB3x2"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageButton2x2"
        app:layout_constraintTop_toTopOf="@+id/imageButton3x1"
        app:srcCompat="@drawable/blueback" />

    <ImageButton
        android:id="@+id/imageButton3x3"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/IB3x3"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageButton2x3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3x2"
        app:srcCompat="@drawable/blueback" />

    <ImageButton
        android:id="@+id/imageButton3x4"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/IB3x4"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/imageButton2x4"
        app:layout_constraintTop_toTopOf="@+id/imageButton3x3"
        app:srcCompat="@drawable/blueback" />


</androidx.constraintlayout.widget.ConstraintLayout>